:recycle: [#29] update serializers and remove User in tests
